feat: implement InferenceEngineClient core functionality (WIP)
- Add complete generate_batched logic for load balancing
- Implement all InferenceEngine trait methods
- Add trajectory routing stub (TODO: complex batching)
- Ready for testing with mock engines

Core batching works, trajectory routing pending

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ name = "ferrum"
 crate-type = ["cdylib"]
 
 [dependencies]
+futures = "0.3"
 pyo3 = { version = "0.25.1", features = ["extension-module"] }
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -16,3 +17,4 @@ serde_json = "1.0"
 uuid = { version = "1.0", features = ["v4"] }
 thiserror = "1.0"  # Better error types
 tracing = "0.1"    # Logging/observability
+async-trait = "0.1"
