--- a/ferrum/Cargo.toml
+++ b/ferrum/Cargo.toml
@@ -19,3 +19,4 @@ uuid = { version = "1.0", features = ["v4", "serde"] }
 thiserror = "1.0"  # Better error types
 tracing = "0.1"    # Logging/observability
 async-trait = "0.1"
+pin-project-lite = "0.2"
